# simple_ado

./: .gitignore  README.md  auth_helper.py  azure-pipelines.yml  coverage.xml  device_flow_test.py  inlinecss.py  progress_callback_test.py  pylintrc  pyproject.toml  pytest.ini  sad_test.py  stylecheck.sh  test.sh
.azure/: azure-pipelines.yml  publish.yml
.github/workflows/: ci.yml  publish.yml  security.yml
simple_ado/: __init__.py  audit.py  auth_helper.py  base_client.py  builds.py  comments.py  context.py  endpoints.py  exceptions.py  git.py  governance.py  graph.py  http_client.py  identities.py  pipelines.py  pools.py  pull_requests.py  security.py  types.py  user.py  utilities.py  wiki.py  work_item.py  workitems.py
simple_ado/auth/: __init__.py  ado_auth.py  ado_azid_auth.py  ado_basic_auth.py  ado_token_auth.py
simple_ado/models/: __init__.py  audit.py  operations.py  property.py  pull_requests.py  work_item_built_in_fields.py  work_item_relation_type.py
tests/: README.md  __init__.py  conftest.py  test_config.toml  test_simple_ado.py
tests/fixtures/: builds_list.json  git_refs.json
tests/integration/: test_integration.py
tests/unit/: test_builds.py  test_client.py  test_work_item.py
