[tool.poetry]
name = "simple_ado"
version = "5.1.0"
description = "A simple wrapper around the Azure DevOps REST API"

license = "MIT"

authors = ["Dale Myers <dalemy@microsoft.com>"]

readme = 'README.md'

repository = "https://github.com/Microsoft/simple_ado"
homepage = "https://github.com/Microsoft/simple_ado"

keywords = ['azure', 'devops', 'ado']

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Environment :: MacOS X',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Topic :: Software Development',
    'Topic :: Utilities',
]

[tool.poetry.dependencies]
python = "^3.10"
deserialize = "^2.2.0"
requests = "^2.31.0"
tenacity = "^8.2.2"

[tool.poetry.dev-dependencies]
black = "^25.9.0"
mypy = "^1.18.2"
pylint = "^3.3.9"
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
pytest-mock = "^3.11.1"
python-dotenv = "^1.1.1"
PyYAML = "^6.0.3"
responses = "^0.23.1"
toml = "^0.10.2"
types-PyYAML = "^6.0.12.11"
types-requests = "^2.31.0.2"
types-toml = "^0.10.8.7"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.408"

[tool.mypy]
strict = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["deserialize"]
ignore_missing_imports = true

[tool.pyright]
typeCheckingMode = "strict"
reportUnknownParameterType = "error"
reportMissingParameterType = "error"
reportUnknownArgumentType = "error"
reportUnknownMemberType = "error"
reportUnknownVariableType = "error"
reportUntypedFunctionDecorator = "error"
reportUntypedClassDecorator = "error"
reportUntypedBaseClass = "error"
reportMissingTypeStubs = false
pythonVersion = "3.10"
pythonPlatform = "All"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
